--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,9 @@ body {
 }
 
 .panel > *:first-child { transform: translateY(-100%); }
+.panel.open-active > *:first-child { transform: translateY(0); }
+.panel > *:last-child { transform: translateY(100%); }
+.panel.open-active > *:last-child { transform: translateY(0); }
 
 
 .panel p {
@@ -69,5 +72,11 @@ body {
   font-size: 4em;
 }
 .panel.open {
+  flex: 5;
   font-size: 40px;
+}
+
+.cta {
+  color: white;
+  text-decoration: none;
 }
